--- a/backend/package.json
+++ b/backend/package.json
@@ -4,14 +4,14 @@
   "description": "",
   "license": "ISC",
   "author": "yashwant sahu",
-  "type": "commonjs",
+  "type": "module",
   "main": "index.js",
   "scripts": {
     "test": "node index.js",
     "start": "nodemon src/index.js"
   },
   "dependencies": {
-    "bcryptjs": "^2.4.3",
+    "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
