--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,10 +12,13 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
-    "@mui/material": "^6.4.3",
+    "@mui/icons-material": "^6.4.5",
+    "@mui/material": "^6.4.5",
     "@tailwindcss/vite": "^4.0.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.4.0",
+    "react-router-dom": "^7.1.5",
     "tailwindcss": "^4.0.5"
   },
   "devDependencies": {
